--- a/settings/settings.yml
+++ b/settings/settings.yml
@@ -1,4 +1,7 @@
-:sources: 
+#Sources
+:sources:
+  Alert:
+    :poll_interval: 300
 
 :development:
   :licensefile: settings/license.key
@@ -10,7 +13,7 @@
   :redis: localhost:6379
   :syncserver: http://localhost:9292/api/application/
   :push_server: http://appname:secret@localhost:8675/
-:production: 
+:production:
   :licensefile: settings/license.key
   :redis: localhost:6379
   :syncserver: http://localhost:9292/api/application/
